# hohotach

./: .gitignore  README.md  hohotach_config.yaml.example  init.nvim  pyproject.toml  run.sh
app/: __main__.py
app/config/: __init__.py  config.py
app/telegram/: __init__.py  client.py  dialog_manager.py
app/utils/: __init__.py  logger.py
app/vim/: client.py
